# rust-lambda-test

./: .gitignore  README.md  makefile  samconfig.toml  template.yaml  zl.kdl
.aws-sam/: build.toml
.aws-sam/cache/fed4520b-8f2e-47ba-bd29-f2dead8c51db/: bootstrap
events/: test-root.json  test-welcome.json
rust_app/: Cargo.toml
rust_app/src/: main.rs
