[package]
name = "rust-lambda-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
lambda_http = "0.11.1"
lambda_runtime = "0.6.0"
serde = "1.0.136"
serde_json = "1.0.117"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
